fix. timer circle and alarm alignment

--- a/css/style.css
+++ b/css/style.css
@@ -548,7 +548,7 @@ ion-icon {
 .timer-title > input {
     width: 100%;
     height: 3vw;
-    margin-bottom: 2vw;
+    margin-bottom: 3vw;
     border: none;
     color: black;
     background: transparent;
